// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`SASS\` asset generator renders SASS correctly with \`selector\` option 1`] = `
"$test-font: \\"test\\"

@font-face
    font-family: $test-font
    src: \\"::src-attr::\\"

%test-font-style
    font-family: test !important
    font-style: normal
    font-weight: normal !important
    font-variant: normal
    text-transform: none
    line-height: 1
    -webkit-font-smoothing: antialiased
    -moz-osx-font-smoothing: grayscale

.my-selector:before
    @extend %test-font-style


$test-map: (
    \\"my-icon\\": \\"\\\\f101\\",
)

.my-selector.tf-my-icon:before
    content: map-get($test-map, \\"my-icon\\")
"
`;

exports[`\`SASS\` asset generator renders SASS correctly with prefix and tag name options 1`] = `
"$test-font: \\"test\\"

@font-face
    font-family: $test-font
    src: \\"::src-attr::\\"

%test-font-style
    font-family: test !important
    font-style: normal
    font-weight: normal !important
    font-variant: normal
    text-transform: none
    line-height: 1
    -webkit-font-smoothing: antialiased
    -moz-osx-font-smoothing: grayscale

b[class^=\\"tf-\\"]:before, b[class*=\\" tf-\\"]:before
    @extend %test-font-style


$test-map: (
    \\"my-icon\\": \\"\\\\f101\\",
)

.tf-my-icon:before
    content: map-get($test-map, \\"my-icon\\")
"
`;
